--- a/Crashes_MissingValues.ipynb
+++ b/Crashes_MissingValues.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "1447de2e",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "59016840",
    "metadata": {},
    "outputs": [
@@ -36026,7 +36026,7 @@
        " ...]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -36037,7 +36037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "331a1371",
    "metadata": {},
    "outputs": [
@@ -37090,7 +37090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "c72069ba",
    "metadata": {},
    "outputs": [],
@@ -37105,7 +37105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "id": "17efcabb",
    "metadata": {},
    "outputs": [],
@@ -37119,7 +37119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "a52eed87",
    "metadata": {},
    "outputs": [],
@@ -37127,6 +37127,21 @@
     "def remove_rows_with_nulls(data, attribute):\n",
     "    \n",
     "    data[:] = [record for record in data if record.get(attribute) not in [None, \"\", float(\"nan\")]]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "f67e982e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mv_count(variable):\n",
+    "    count = 0 \n",
+    "    for record in crashes:\n",
+    "        if not record[variable]:\n",
+    "            count += 1\n",
+    "    return count"
    ]
   },
   {
@@ -37147,29 +37162,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "b8279c74",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n"
-     ]
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "null_count = 0\n",
-    "for record in crashes:\n",
-    "    if not record[\"STREET_NAME\"]:  \n",
-    "        null_count += 1\n",
-    "print(null_count)"
+    "mv_count('STREET_NAME')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "50ddcf9d",
    "metadata": {},
    "outputs": [],
@@ -37179,24 +37193,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "354454a5",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n"
-     ]
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "null_count = 0\n",
-    "for record in crashes:\n",
-    "    if not record[\"STREET_NAME\"]:  \n",
-    "        null_count += 1\n",
-    "print(null_count)"
+    "mv_count('STREET_NAME')"
    ]
   },
   {
@@ -37222,11 +37235,7 @@
     }
    ],
    "source": [
-    "null_count = 0\n",
-    "for record in crashes:\n",
-    "    if not record[\"MOST_SEVERE_INJURY\"]:  \n",
-    "        null_count += 1\n",
-    "print(null_count)"
+    "mv_count('MOST_SEVERE_INJURY')"
    ]
   },
   {
@@ -37254,11 +37263,7 @@
     }
    ],
    "source": [
-    "null_count = 0\n",
-    "for record in crashes:\n",
-    "    if not record[\"MOST_SEVERE_INJURY\"]:  # Controlla se è None o stringa vuota\n",
-    "        null_count += 1\n",
-    "print(null_count)"
+    "mv_count('MOST_SEVERE_INJURY')"
    ]
   },
   {
@@ -37267,20 +37272,6 @@
    "metadata": {},
    "source": [
     "# REPORT TYPE"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c24c88d7",
-   "metadata": {},
-   "source": [
-    "REPORT_TYPE:\n",
-    "\n",
-    "NOT ON SCENE (DESK REPORT)    167961\n",
-    "\n",
-    "ON SCENE                       84968\n",
-    "\n",
-    "Siccome ci sono solo 5000 report type nulli, possiamo metterli tutti not on scene, perché è sbilanciato"
    ]
   },
   {
@@ -37298,43 +37289,15 @@
     }
    ],
    "source": [
-    "null_count = 0\n",
-    "for record in crashes:\n",
-    "    if not record[\"REPORT_TYPE\"]:  \n",
-    "        null_count += 1\n",
-    "print(null_count)"
+    "mv_count('REPORT_TYPE')"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "bde686c1",
+   "cell_type": "markdown",
+   "id": "7da60a3f",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "replace_nulls(crashes, 'REPORT_TYPE', 'NOT ON SCENE (DESK REPORT)')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "7f21691a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n"
-     ]
-    }
-   ],
-   "source": [
-    "null_count = 0\n",
-    "for record in crashes:\n",
-    "    if not record[\"REPORT_TYPE\"]:  \n",
-    "        null_count += 1\n",
-    "print(null_count)"
+    "There is no way to know which is the report type. So we're keeping the null values."
    ]
   },
   {
@@ -37375,11 +37338,7 @@
     }
    ],
    "source": [
-    "null_count = 0\n",
-    "for record in crashes:\n",
-    "    if not record[\"STREET_DIRECTION\"]:  \n",
-    "        null_count += 1\n",
-    "print(null_count)"
+    "mv_count('STREET_DIRECTION')"
    ]
   },
   {
@@ -37407,11 +37366,7 @@
     }
    ],
    "source": [
-    "null_count = 0\n",
-    "for record in crashes:\n",
-    "    if not record[\"STREET_DIRECTION\"]: \n",
-    "        null_count += 1\n",
-    "print(null_count)"
+    "mv_count('STREET_DIRECTION')"
    ]
   },
   {
@@ -37439,11 +37394,7 @@
     }
    ],
    "source": [
-    "null_count = 0\n",
-    "for record in crashes:\n",
-    "    if not record[\"STREET_DIRECTION\"]: \n",
-    "        null_count += 1\n",
-    "print(null_count)"
+    "mv_count('STREET_DIRECTION')"
    ]
   },
   {
@@ -37469,11 +37420,7 @@
     }
    ],
    "source": [
-    "null_count = 0\n",
-    "for record in crashes:\n",
-    "    if not record[\"BEAT_OF_OCCURRENCE\"]:  \n",
-    "        null_count += 1\n",
-    "print(null_count)"
+    "mv_count('BEAT_OF_OCCURRENCE')"
    ]
   },
   {
@@ -37501,11 +37448,7 @@
     }
    ],
    "source": [
-    "null_count = 0\n",
-    "for record in crashes:\n",
-    "    if not record[\"BEAT_OF_OCCURRENCE\"]:  \n",
-    "        null_count += 1\n",
-    "print(null_count)"
+    "mv_count('BEAT_OF_OCCURRENCE')"
    ]
   },
   {
@@ -37533,11 +37476,7 @@
     }
    ],
    "source": [
-    "null_count = 0\n",
-    "for record in crashes:\n",
-    "    if not record[\"BEAT_OF_OCCURRENCE\"]:  \n",
-    "        null_count += 1\n",
-    "print(null_count)"
+    "mv_count('BEAT_OF_OCCURRENCE')"
    ]
   },
   {
@@ -37565,11 +37504,7 @@
     }
    ],
    "source": [
-    "null_count = 0\n",
-    "for record in crashes:\n",
-    "    if not record[\"BEAT_OF_OCCURRENCE\"]:  \n",
-    "        null_count += 1\n",
-    "print(null_count)"
+    "mv_count('BEAT_OF_OCCURRENCE')"
    ]
   },
   {
@@ -37597,11 +37532,7 @@
     }
    ],
    "source": [
-    "null_count = 0\n",
-    "for record in crashes:\n",
-    "    if not record[\"BEAT_OF_OCCURRENCE\"]:  \n",
-    "        null_count += 1\n",
-    "print(null_count)"
+    "mv_count('BEAT_OF_OCCURRENCE')"
    ]
   },
   {
@@ -37627,12 +37558,16 @@
     }
    ],
    "source": [
-    "null_count = 0\n",
-    "for record in crashes:\n",
-    "    if not record[\"LATITUDE\"]:  \n",
-    "        null_count += 1\n",
-    "print(null_count)"
+    "mv_count('LATITUDE')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57ca280c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -37709,11 +37644,7 @@
     }
    ],
    "source": [
-    "null_count = 0\n",
-    "for record in crashes:\n",
-    "    if not record[\"LATITUDE\"]:  \n",
-    "        null_count += 1\n",
-    "print(null_count)"
+    "mv_count('LATITUDE')"
    ]
   },
   {
@@ -37788,11 +37719,7 @@
     }
    ],
    "source": [
-    "null_count = 0\n",
-    "for record in crashes:\n",
-    "    if not record[\"LATITUDE\"]:  \n",
-    "        null_count += 1\n",
-    "print(null_count)"
+    "mv_count('LATITUDE')"
    ]
   },
   {
@@ -37981,16 +37908,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "95abacff",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "remove_rows_with_nulls(crashes, 'LOCATION')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 40,
    "id": "0611847a",
    "metadata": {},
@@ -38004,11 +37921,7 @@
     }
    ],
    "source": [
-    "null_count = 0\n",
-    "for record in crashes:\n",
-    "    if not record[\"LATITUDE\"]:  \n",
-    "        null_count += 1\n",
-    "print(null_count)"
+    "mv_count('LATITUDE')"
    ]
   },
   {
