--- a/Vehicles_MissingValues.ipynb
+++ b/Vehicles_MissingValues.ipynb
@@ -17222,7 +17222,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df7a6edf",
+   "id": "0aa58764",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17979,15 +17979,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "443237a2fb8745f0",
-   "metadata": {},
-   "source": [
-    "### VEHICLE_TYPE\n",
-    "Ho aggiiunto la categoria \"NON-MOTOR VEHICLE\" per i  pedoni, bici e veicoli non a motore. Per il driver ho messo SUV che è la categoria più comune, per i non contact vehicle ho messo UNKNOWN."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 67,
    "id": "2dcd2672",
@@ -18020,75 +18011,7 @@
    },
    "outputs": [],
    "source": [
-    "replace_nulls_with_conditions(vehicles, 'UNIT_TYPE', 'PEDESTRIAN', 'VEHICLE_TYPE', 'UNKNOWN/NA')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "id": "87646bd207ffc1b0",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-11-08T14:28:51.436232Z",
-     "start_time": "2024-11-08T14:28:51.300731Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "replace_nulls_with_conditions(vehicles, 'UNIT_TYPE', 'BICYCLE', 'VEHICLE_TYPE', 'UNKNOWN/NA')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "id": "5bd774472283f65e",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-11-08T14:28:51.684987Z",
-     "start_time": "2024-11-08T14:28:51.551270Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "replace_nulls_with_conditions(vehicles, 'UNIT_TYPE', 'NON-MOTOR VEHICLE', 'VEHICLE_TYPE', 'UNKNOWN/NA') "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "id": "a15a2f065594bc4f",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-11-08T14:28:52.026263Z",
-     "start_time": "2024-11-08T14:28:51.896892Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "replace_nulls_with_conditions(vehicles, 'UNIT_TYPE', 'NON-CONTACT VEHICLE', 'VEHICLE_TYPE', 'UNKNOWN/NA')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "204d81d8",
-   "metadata": {},
-   "source": [
-    "Per i driver, siccome sono solo 6, usiamo la moda"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "id": "49ea26dd6f32fbda",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-11-08T14:28:52.751450Z",
-     "start_time": "2024-11-08T14:28:52.497369Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "replace_nulls_with_conditions(vehicles, 'UNIT_TYPE', 'DRIVER', 'VEHICLE_TYPE', 'SPORT UTILITY VEHICLE (SUV)')"
+    "replace_nulls(vehicles, 'VEHICLE_TYPE', 'UNKNOWN/NA')"
    ]
   },
   {
