--- a/Crashes_MissingValues.ipynb
+++ b/Crashes_MissingValues.ipynb
@@ -36031,9 +36031,92 @@
      "output_type": "execute_result"
     }
    ],
+   "source": ""
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "103a518f8f745819"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-23T11:50:17.606678Z",
+     "start_time": "2024-11-23T11:50:14.151146Z"
+    }
+   },
+   "cell_type": "code",
    "source": [
-    "crashes"
-   ]
+    "# LONGITUDINE E LATITUDINE\n",
+    "from geopy.geocoders import Nominatim\n",
+    "import time\n",
+    "    # Configura il geolocalizzatore\n",
+    "geolocator = Nominatim(user_agent=\"incident_locator\")\n",
+    "\n",
+    "def fill_missing_geolocation(data, street_no_col, street_dir_col, street_name_col, lat_col, lon_col, loc_col,\n",
+    "                                 city=\"Chicago\", state=\"IL\", pause=1):\n",
+    "        \"\"\"\n",
+    "        Completa i dati di latitudine, longitudine e indirizzo mancante in un dataset.\n",
+    "\n",
+    "        :param data: Lista di record (dataset) su cui operare.\n",
+    "        :param street_no_col: Nome della colonna del numero civico.\n",
+    "        :param street_dir_col: Nome della colonna della direzione della strada.\n",
+    "        :param street_name_col: Nome della colonna del nome della strada.\n",
+    "        :param lat_col: Nome della colonna per la latitudine.\n",
+    "        :param lon_col: Nome della colonna per la longitudine.\n",
+    "        :param loc_col: Nome della colonna per l'indirizzo completo.\n",
+    "        :param city: Città di default per costruire l'indirizzo (default: Chicago).\n",
+    "        :param state: Stato di default per costruire l'indirizzo (default: IL).\n",
+    "        :param pause: Pausa (in secondi) tra le richieste per evitare il limite API (default: 1).\n",
+    "        \"\"\"\n",
+    "\n",
+    "        # Funzione interna per geocodificare un indirizzo\n",
+    "        def get_lat_lon_location(street_no, street_direction, street_name):\n",
+    "            # If you want to print the addresses for which we can't find lat, long and address uncomment the commented line below\n",
+    "            # try:\n",
+    "                # Crea l'indirizzo come stringa\n",
+    "                address = f\"{street_no} {street_direction} {street_name}, {city}, {state}\"\n",
+    "                location = geolocator.geocode(address, timeout=10)\n",
+    "                if location:\n",
+    "                    return location.latitude, location.longitude, location.address\n",
+    "           # except Exception as e:\n",
+    "             #   print(f\"Errore con l'indirizzo {address}: {e}\")\n",
+    "           # return None, None, None\n",
+    "\n",
+    "        # Itera sui record del dataset\n",
+    "        for record in data:\n",
+    "            if not record.get(lat_col) or not record.get(lon_col) or not record.get(loc_col):\n",
+    "                lat, lon, loc = get_lat_lon_location(record.get(street_no_col), record.get(street_dir_col),\n",
+    "                                                     record.get(street_name_col))\n",
+    "                if lat and lon:\n",
+    "                    # Aggiorna i valori mancanti\n",
+    "                    record[lat_col] = lat\n",
+    "                    record[lon_col] = lon\n",
+    "                    record[loc_col] = loc\n",
+    "\n",
+    "                # Pausa per evitare limiti di richiesta\n",
+    "                time.sleep(pause)\n",
+    "\n",
+    "        return data  # Restituisce il dataset aggiornato"
+   ],
+   "id": "76809960b3c77f5f",
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Nominatim' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[1], line 4\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;66;03m# LONGITUDINE E LATITUDINE\u001B[39;00m\n\u001B[1;32m      2\u001B[0m \n\u001B[1;32m      3\u001B[0m     \u001B[38;5;66;03m# Configura il geolocalizzatore\u001B[39;00m\n\u001B[0;32m----> 4\u001B[0m geolocator \u001B[38;5;241m=\u001B[39m \u001B[43mNominatim\u001B[49m(user_agent\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mincident_locator\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[1;32m      6\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mfill_missing_geolocation\u001B[39m(data, street_no_col, street_dir_col, street_name_col, lat_col, lon_col, loc_col,\n\u001B[1;32m      7\u001B[0m                                  city\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mChicago\u001B[39m\u001B[38;5;124m\"\u001B[39m, state\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mIL\u001B[39m\u001B[38;5;124m\"\u001B[39m, pause\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m1\u001B[39m):\n\u001B[1;32m      8\u001B[0m \u001B[38;5;250m        \u001B[39m\u001B[38;5;124;03m\"\"\"\u001B[39;00m\n\u001B[1;32m      9\u001B[0m \u001B[38;5;124;03m        Completa i dati di latitudine, longitudine e indirizzo mancante in un dataset.\u001B[39;00m\n\u001B[1;32m     10\u001B[0m \n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m     20\u001B[0m \u001B[38;5;124;03m        :param pause: Pausa (in secondi) tra le richieste per evitare il limite API (default: 1).\u001B[39;00m\n\u001B[1;32m     21\u001B[0m \u001B[38;5;124;03m        \"\"\"\u001B[39;00m\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'Nominatim' is not defined"
+     ]
+    }
+   ],
+   "execution_count": 1
   },
   {
    "cell_type": "code",
